--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<!-- Load controller-->
 	<script type="text/javascript" src="./Landing_page/Controller/landingPage.js"></script>
 	<script type="text/javascript" src="./login/Controlador/login.js"></script>
+	<script type="text/javascript" src="./manage-projects/Controller/manage-projects.js"></script>
 </body>
 
 </html>
