Funcionando envio de correos EmailJS

--- a/Landing_page/landingPage.html
+++ b/Landing_page/landingPage.html
@@ -293,7 +293,7 @@
                     <br/>
                     <div class="row">
                         <div class="col-md-6 offset-md-3 center">
-                            <button type="button" class="btn btn-outline-success" ng-click="enviarCorreo(home.contactus)">Enviar Mensaje</button>
+                            <button type="button" class="btn btn-outline-success" ng-click="home.enviarCorreo()">Enviar Mensaje</button>
                         </div>
                     </div>
                 </form>
